--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,3 +2,8 @@
 # URL Property
 ##############################################
 url = https://s1.demo.opensourcecms.com/wordpress/wp-login.php
+
+##############################################
+# BROWSER Property
+##############################################
+browser=chrome
