--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,8 @@
 ##############################################
 # URL Property
 ##############################################
-url = https://s1.demo.opensourcecms.com/wordpress/wp-login.php
+#url = https://s1.demo.opensourcecms.com/wordpress/wp-login.php
+url = https://test.salesforce.com
 
 ##############################################
 # BROWSER Property
