--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,6 +3,8 @@
 ##############################################
 #url = https://s1.demo.opensourcecms.com/wordpress/wp-login.php
 url = https://test.salesforce.com
+waldenURL=https://dev05-na01-laureate.demandware.net/s/WaldenU/home/
+
 
 ##############################################
 # BROWSER Property
