New fixes to testng.xml and pom.xml

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -10,3 +10,8 @@ waldenURL=https://dev05-na01-laureate.demandware.net/s/WaldenU/home/
 # BROWSER Property
 ##############################################
 browser=chrome
+
+##############################################
+# ENVIRONMENT Property
+##############################################
+environment=l1
